# sirius-alpha

./: .gitignore  .sample.env  Cargo.toml  README.md  build.rs  sample.env.yaml  sdkconfig.defaults
.cargo/: config.toml
scripts/: build-debug-flash.sh  build-release-flash.sh  build-setup.mjs  build.sh  monitor.sh  package-lock.json  package.json  qemu.sh  setup_envs.sh
src/: main.rs  main_old.rs  tm1637.rs
src/common/: mod.rs
src/common/adaptors/: network.rs
src/common/api_client/: mod.rs  sirius_proxima.rs
src/common/errors/: api_errors.rs  common_errors.rs  device_errors.rs  mod.rs  setup_errors.rs  wifi_errors.rs
src/common/libs/: mod.rs  tm1637.rs
src/common/libs/tm1637/: mappings.rs  mod.rs
src/common/models/: device.rs  mod.rs  sirius_proxima_api.rs
src/constants/: default_values.rs  env_values.rs  environment.rs  headers.rs  mod.rs  segment_display_text.rs  strings.rs
src/features/: display_feature.rs  mod.rs  network_feature.rs
src/features/network/: apis.rs  mod.rs
src/features/peripheral/: mod.rs
src/helpers/: atomic_esp_system_time.rs  chip_info.rs  mod.rs
src/helpers/logs/: fern_log.rs
src/libs/tm1637/: errors.rs  mappings.rs  mod.rs
src/tmdd/: fourdigit7segdis.rs  lib.rs  mod.rs
