[package]
name = "sirius-alpha-rust"
version = "0.1.0"
authors = ["Ganesh Rathinavel <ganeshrvel@outlook.com>"]
edition = "2018"
resolver = "2"
publish = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "1.0.55"
#embedded-svc = { version = "0.17.3", features = ["experimental"] }
#esp-idf-svc = { version = "0.37.2", features = ["experimental"] }
esp-idf-svc = "0.36.6"
esp-idf-hal = "0.32.4"
embedded-svc = "0.16"
esp-idf-sys = { version = "0.30.3", features = ["binstart"] }
#esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
#esp-idf-hal = "0.33.1"
log = "0.4.14"
strum_macros = "0.24.0"
dotenv_codegen = "0.15.0"
url = "2.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde-value = "0.7.0"

attohttpc = { git = "https://github.com/killyourphone/attohttpc", branch = "esp32", default-features = false }
#ring = { git = "https://github.com/killyourphone/ring", branch = "esp32", features = ["size_optimized"] }
#rustls = { version = "0.20.2", features = ["dangerous_configuration"] }

[patch.crates-io]
#cc = { git = "https://github.com/killyourphone/cc-rs", branch = "esp32" }
# Overriding ureq is necessary for some reason (it's a build-time dep of embuild)
#ureq = { git = "https://github.com/killyourphone/ureq", branch = "esp32" }


#esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
#esp-idf-svc = "0.37.2"
#embedded-svc = "0.17.2"
#embedded-hal = "0.2"
#embedded-graphics = "0.7"
#display-interface = "0.4"
#display-interface-spi = "0.4"
#st7789 = "0.6"
#ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
#ssd1306 = "0.7"
#epd-waveshare = "0.5.0"


[build-dependencies]
embuild = "0.28"
dotenv = "0.15.0"
anyhow = "1.0"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]


