[package]
name = "sirius-alpha-rust"
version = "0.1.0"
authors = ["Ganesh Rathinavel <ganeshrvel@outlook.com>"]
edition = "2018"
resolver = "2"
publish = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = "0.37.3"
esp-idf-hal = { version = "0.33.2" }
embedded-svc = "0.17.4"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
embedded-hal = "0.2.7"

attohttpc = { git = "https://github.com/killyourphone/attohttpc", branch = "esp32", default-features = false, features = ["compress", "json"] }

fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
anyhow = "1.0.51"
thiserror = "1.0.30"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde-value = "0.7.0"

strum = "0.24.0"
strum_macros = "0.24.0"
either = "1.6.1"

lazy_static = "1.4.0"
dotenv_codegen = "0.15.0"

[patch.crates-io]

[build-dependencies]
embuild = "0.28"
dotenv = "0.15.0"
anyhow = "1.0"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]


